# Draftz

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
.github/workflows/: build-and-release.yml  build.yml
header/: features.h
